Publish hosting: index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
     /* Mesa com sensação de felt verde */
     .table-container {
-      background: url('https://i.imgur.com/bb1eI3F.jpg'); /* textura de felt verde */
+      background: url('https://www.shutterstock.com/image-vector/black-jack-table-background-green-600nw-1937358541.jpg'); /* textura de felt verde */
       background-size: cover;
       border: 2px solid #004d00;
       border-radius: 20px;
