--- a/game.html
+++ b/game.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blackjack Challenge - Jogo</title>
+  <title>Blackjack - Mesa de Jogo</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    body {
-      background: #2d2d2d;
-    }
+    body { background: #2d2d2d; }
     .table-3d {
       perspective: 1200px;
       margin: 20px auto;
@@ -35,9 +33,7 @@
       transform-style: preserve-3d;
       transition: transform 0.6s;
     }
-    .card.flipped {
-      transform: rotateY(180deg);
-    }
+    .card.flipped { transform: rotateY(180deg); }
     .card-face {
       position: absolute;
       width: 100%;
@@ -62,26 +58,7 @@
       transform: rotateY(180deg);
       border: 2px solid #004dff;
     }
-    .animate-slide {
-      animation: slideIn 0.5s ease-out;
-    }
-    @keyframes slideIn {
-      from { transform: translateY(-20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-    .controls {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .player-area, .dealer-area {
-      padding: 20px;
-    }
-    .player-area {
-      text-align: center;
-    }
-    .dealer-area {
-      text-align: center;
-    }
+    .controls { text-align: center; margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -120,11 +97,11 @@
     const projectId = 'code_e63283';
     let gameId = null;
     let dealerRevealed = false;
-    let token = localStorage.getItem('token');
+    const token = localStorage.getItem('token');
     if (!token) {
       window.location.href = 'login.html';
     }
-    
+
     function authHeaders() {
       return { 'Content-Type': 'application/json', 'Authorization': 'Bearer ' + token };
     }
@@ -137,7 +114,7 @@
       });
       return await response.json();
     }
-
+    
     async function hitGame() {
       const response = await fetch(`https://api.greb.com.br/functions/${projectId}/blackjack`, {
         method: 'POST',
@@ -158,7 +135,7 @@
 
     function createCardElement(card, faceUp) {
       const container = document.createElement('div');
-      container.className = 'card-container animate-slide';
+      container.className = 'card-container';
       const cardDiv = document.createElement('div');
       cardDiv.className = 'card';
       if(faceUp) cardDiv.classList.add('flipped');
@@ -244,7 +221,7 @@
 
     document.getElementById('logout').addEventListener('click', () => {
       localStorage.removeItem('token');
-      window.location.href = 'login.html';
+      window.location.href = 'index.html';
     });
   </script>
 </body>
