publish: hosting_files/game.html

--- a/game.html
+++ b/game.html
@@ -74,7 +74,7 @@
       </div>
       <hr class="my-4 border-white">
       <div class="player-area">
-        <h2 class="text-xl text-white mb-2">Você</h2>
+        <h2 class="text-xl text-white mb-2">Suas Cartas</h2>
         <div id="playerCards" class="flex justify-center"></div>
       </div>
     </div>
@@ -163,6 +163,7 @@
       const container = document.getElementById('dealerCards');
       container.innerHTML = '';
       cards.forEach((card, index) => {
+        // Mostra todas as cartas do player, para o dealer mostra apenas a primeira
         let faceUp = dealerRevealed || (index === 0);
         container.appendChild(createCardElement(card, faceUp));
       });
