--- a/index.html
+++ b/index.html
@@ -3,39 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blackjack Virtual - Jogue Grátis</title>
+  <title>Blackjack Virtual - Jogue Gratuitamente</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    body {
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-    }
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-    }
-    .btn-play {
-      background: #38b2ac;
-      padding: 1rem 2rem;
-      border-radius: 9999px;
-      font-size: 1.25rem;
-      font-weight: 700;
-      transition: transform 0.2s;
-    }
-    .btn-play:hover {
-      transform: scale(1.05);
-    }
+    body { background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); color: #fff; }
+    .hero { min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 0 20px; }
+    .btn-play { background: #38b2ac; padding: 1rem 2rem; border-radius: 9999px; font-size: 1.25rem; font-weight: 700; transition: transform 0.2s; }
+    .btn-play:hover { transform: scale(1.05); }
   </style>
 </head>
 <body>
   <section class="hero">
     <h1 class="text-5xl font-extrabold mb-4">Bem-vindo ao Blackjack Virtual</h1>
-    <p class="text-xl mb-8">Jogue com dinheiro virtual e gratuitamente! Encare desafios realistas, aposte nos valores: R$10, R$25, R$50, R$100, R$250 e R$500, e transforme suas jogadas em vitórias emocionantes.</p>
+    <p class="text-xl mb-8">Jogue com dinheiro virtual em nosso cassino online! Entre, aposte e divirta-se – tudo de graça com saldo inicial de R$1000 e apostas variadas.</p>
     <button id="btnJogar" class="btn-play">Jogar Agora</button>
   </section>
   <script>
